--- a/index.html
+++ b/index.html
@@ -84,6 +84,41 @@
   <!--==============================
     Mobile Menu
   ============================== -->
+  <div class="vs-menu-wrapper">
+    <div class="vs-menu-area text-center">
+      <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
+      <div class="mobile-logo">
+        <a href="index.html"><img src="assets/img/logo-black1.png" alt="" class="logo"></a>
+      </div>
+      <div class="vs-mobile-menu">
+        <ul>
+          <li class="menu-item-has-children">
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About Us</a>
+          </li>
+          <li class="menu-item-has-children">
+            <a href="service1.html">Services</a>
+            <ul class="sub-menu">
+              <li><a href="service1.html">Service</a></li>
+              <li><a href="service-details.html">Service Details</a></li>
+            </ul>
+          </li>
+          <li class="menu-item-has-children">
+            <a href="product.html">Products</a>
+            <ul class="sub-menu">
+              <li><a href="product.html">Products</a></li>
+              <li><a href="product-details1.html">product-details1</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <!--==============================
       Sidemenu
   ============================== -->
