--- a/service1.html
+++ b/service1.html
@@ -89,7 +89,7 @@
     <div class="vs-menu-area text-center">
       <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
       <div class="mobile-logo">
-        <a href="index.html"><img src="assets/img/logo-black.png" alt="" class="logo"></a>
+        <a href="index.html"><img src="assets/img/logo-black1.png" alt="" class="logo"></a>
       </div>
       <div class="vs-mobile-menu">
         <ul>
@@ -100,19 +100,18 @@
             <a href="about.html">About Us</a>
           </li>
           <li class="menu-item-has-children">
-            <a href="service.html">Services</a>
+            <a href="service1.html">Services</a>
             <ul class="sub-menu">
-              <li><a href="services.html">Service</a></li>
+              <li><a href="service1.html">Service</a></li>
               <li><a href="service-details.html">Service Details</a></li>
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a href="#none">Pages</a>
-            
-          </li>
-          <li class="menu-item-has-children">
-            <a href="blog.html">News</a>
-            
+            <a href="product.html">Products</a>
+            <ul class="sub-menu">
+              <li><a href="product.html">Products</a></li>
+              <li><a href="product-details1.html">product-details1</a></li>
+            </ul>
           </li>
           <li>
             <a href="contact.html">Contact Us</a>
