--- a/product-details2.html
+++ b/product-details2.html
@@ -84,74 +84,33 @@
   </div>-->
   <!--==============================
     Mobile Menu
-  ============================== 
+  ==============================-->
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
       <div class="mobile-logo">
-        <a href="index.html"><img src="assets/img/logo-white1.png" alt="JG Acero" class="logo"></a>
+        <a href="index.html"><img src="assets/img/logo-black1.png" alt="" class="logo"></a>
       </div>
       <div class="vs-mobile-menu">
         <ul>
           <li class="menu-item-has-children">
             <a href="index.html">Home</a>
-            <ul class="sub-menu">
-              <li><a href="index.html">Home 1</a></li>
-              <li><a href="index-2.html">Home 2</a></li>
-              <li><a href="index-3.html">Home 3</a></li>
-            </ul>
           </li>
           <li>
             <a href="about.html">About Us</a>
           </li>
           <li class="menu-item-has-children">
-            <a href="service.html">Services</a>
+            <a href="service1.html">Services</a>
             <ul class="sub-menu">
-              <li><a href="services.html">Service</a></li>
+              <li><a href="service1.html">Service</a></li>
               <li><a href="service-details.html">Service Details</a></li>
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a href="#none">Pages</a>
+            <a href="product.html">Products</a>
             <ul class="sub-menu">
-              <li><a href="index.html">Home 1</a></li>
-              <li><a href="index-2.html">Home 2</a></li>
-              <li><a href="index-3.html">Home 3</a></li>
-              <li><a href="shop.html">Shop</a></li>
-              <li><a href="shop-details.html">Shop Details</a></li>
-              <li><a href="faq.html">FAQ's</a></li>
-              <li><a href="blog.html">Blog List</a></li>
-              <li><a href="blog-grid.html">Blog Grid</a></li>
-              <li><a href="blog-details.html">Blog Details</a>
-              </li>
-              <li><a href="services.html">Service</a></li>
-              <li><a href="service-details.html">Service
-                  Details</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="team-details.html">Team Details</a>
-              </li>
-              <li><a href="project.html">Projects</a></li>
-              <li><a href="project-details.html">Projects
-                  Details</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="error.html">Error Page</a></li>
-              <li><a href="comming-soon.html">Comming Soon</a></li>
-              <li><a href="account.html">My Account</a></li>
-              <li><a href="cart.html">Cart</a></li>
-              <li><a href="checkout.html">Checkout</a></li>
-              <li><a href="price.html">Pricing Plan</a></li>
-              <li><a href="element-typography.html">Elements
-                  Typography</a></li>
-              <li><a href="element-buttons.html">Button Elements</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item-has-children">
-            <a href="blog.html">News</a>
-            <ul class="sub-menu">
-              <li><a href="blog.html">Blog List</a></li>
-              <li><a href="blog-grid.html">Blog Grid</a></li>
-              <li><a href="blog-details.html">Blog Details</a></li>
+              <li><a href="product.html">Products</a></li>
+              <li><a href="product-details1.html">product-details1</a></li>
             </ul>
           </li>
           <li>
@@ -160,7 +119,7 @@
         </ul>
       </div>
     </div>
-  </div>-->
+  </div>
   <!--==============================
       Sidemenu
   ============================== -->
