--- a/service-details.html
+++ b/service-details.html
@@ -310,7 +310,7 @@
   <!--==============================
     Breadcumb
     ============================== -->
-  <div class="breadcumb-wrapper" data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg">
+  <div class="breadcumb-wrapper" style="background-image: url('assets/img/breadcumb/breadcrumb.png');">
     <div class="container z-index-common">
       <div class="breadcumb-content">
         <h1 class="breadcumb-title">SERVICE DETAILS</h1>
@@ -336,7 +336,7 @@
         critical industries such as Oil & Gas, Pharmaceuticals, Chemicals, and Food Processing. Every project we handle
         reflects our focus on quality, customization, and long-term performance.</p>
       <div class="img-box z-index-common mb-40">
-        <img src="assets/img/services/service-details-1.jpg" alt="services">
+        <img src="assets/img/services/service-details-1.png" alt="services">
       </div>
       <p>At JG Acero Industries Pvt. Ltd., we offer end-to-end in-house services tailored to precision fabrication. Our
         expertise begins with advanced designing using CAD tools to ensure process-ready engineering layouts. We perform
@@ -363,10 +363,10 @@
       </div>
       <div class="row">
         <div class="col-md-6 mb-40">
-          <img src="assets/img/services/service-details-2.jpg" alt="Service Details">
+          <img src="assets/img/services/company.jpg" alt="Service Details">
         </div>
         <div class="col-md-6 mb-40">
-          <img src="assets/img/services/service-details-3.jpg" alt="Service Details">
+          <img src="assets/img/services/company1.jpg" alt="Service Details">
         </div>
       </div>
     </div>
@@ -378,7 +378,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/Designing.jpg"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -398,7 +398,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/SheetRolling.jpg"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -418,7 +418,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/PlasmCutting.jpg"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -438,7 +438,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/Machining.jpg" style="width: 551px;height: 300px;"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -458,7 +458,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/Fabrication.jpg" style="width: 551px;height: 300px;"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -478,7 +478,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="vs-blog blog-style2">
             <div class="blog-img">
-              <a href="service1.html"><img class="blog-img__img" src="assets/img/blog/blog-h-1-1.jpg"
+              <a href="service1.html"><img class="blog-img__img" src="assets/img/services/surface.jpg" style="width: 551px;height: 300px;"
                   alt="Blog Image"></a>
             </div>
             <div class="blog-content">
@@ -723,7 +723,8 @@
   <!--==============================
 			Footer Area
 	==============================-->
-  <footer class="footer-wrapper footer-layout3" data-bg-src="assets/img/footer/footer-bg.jpg">
+  <footer class="footer-wrapper footer-layout3">
+    <div class="footer-bg-blur"></div>
     <div class="footer-layout3__overlay"></div>
     <div class="widget-area">
       <div class="container">
