--- a/service1.html
+++ b/service1.html
@@ -311,7 +311,7 @@
   <!--==============================
     Breadcumb
     ============================== -->
-  <div class="breadcumb-wrapper" data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg">
+  <div class="breadcumb-wrapper" style="background-image: url('assets/img/breadcumb/breadcrumb.png');">
     <div class="container z-index-common">
       <div class="breadcumb-content">
         <h1 class="breadcumb-title">SERVICES</h1>
@@ -541,7 +541,7 @@
       <div class="row align-items-center">
         <div class="col-lg-5">
           <div class="choose-img">
-            <img src="assets/img/choose/choose-2-1.jpg" alt="choose">
+            <img src="assets/img/services/choose-2-1.jpg" alt="choose">
           </div>
         </div>
         <div class="col-lg-7">
@@ -713,7 +713,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/Shopfloor.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -745,7 +745,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/MachineShop.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -772,7 +772,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/hydrotest.png" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -800,7 +800,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/refuller tank.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -828,7 +828,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/pressurereduction.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -856,7 +856,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/heavy.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -884,7 +884,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/petroleutank.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -910,7 +910,7 @@
           <div class="project-block">
             <div class="project-block__media">
               <a href="product.html">
-                <img class="project-block__img" src="assets/img/project/project-img-h1-1.jpg" alt="project details">
+                <img class="project-block__img" src="assets/img/project/SKID.jpg" alt="project details" style="width: 570px; height: 380px;">
               </a>
             </div>
             <div class="project-block__content">
@@ -1033,7 +1033,8 @@
   </div> <!--==============================
 			Footer Area
 	==============================-->
-  <footer class="footer-wrapper footer-layout3" data-bg-src="assets/img/footer/footer-bg.jpg">
+  <footer class="footer-wrapper footer-layout3">
+    <div class="footer-bg-blur"></div>
     <div class="footer-layout3__overlay"></div>
     <div class="widget-area">
       <div class="container">
