--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
       <div class="widget  ">
         <div class="vs-widget-about">
           <div class="header-logo">
-            <a href="index.html"><img src="assets/img/logo-black1.png"  alt=""></a>
+            <a href="index.html"><img src="assets/img/logo-black1.png" alt=""></a>
           </div>
           <p>JG Acero Industries Pvt. Ltd. delivers ISO-certified, precision steel solutions for process industries —
             powering innovation through trusted fabrication and scalable infrastructure.</p>
@@ -294,7 +294,7 @@
   <!--==============================
     Breadcumb
     ============================== -->
-  <div class="breadcumb-wrapper" data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg">
+  <div class="breadcumb-wrapper" style="background-image: url('assets/img/breadcumb/breadcrumb.png');">
     <div class="container z-index-common">
       <div class="breadcumb-content">
         <h1 class="breadcumb-title">About Us</h1>
@@ -371,7 +371,7 @@
             </div>
             <div class="signature-box--style1">
               <div class="signature-box__img">
-                <img src="assets/img/about/avatar-2-1.jpg" alt="Avatar 2 1">
+                <img src="assets/img/about/owner.png" alt="Avatar 2 1" style="height: 80px;">
               </div>
               <div class="signature-box__content">
                 <h4 class="signature-box__title">JG ACERO</h4>
@@ -389,7 +389,7 @@
     ==============================-->
   <section class="space-top space-extra-bottom z-index-common overflow-hidden">
     <div class="element--history position-absolute bottom-0 z-index-n1">
-      <img src="assets/img/about/ab-4-1.png" alt="about">
+      <img src="assets/img/about/ab-2-4.png" alt="about">
     </div>
     <div class="container">
       <div class="row align-items-end justify-content-center">
@@ -470,7 +470,7 @@
         </div>
         <div class="col-xl-4 col-lg-8 col-md-9">
           <div class="history-img">
-            <img src="assets/img/about/ab-4-2.jpg" alt="about">
+            <img src="assets/img/about/aboutteam.jpeg" alt="about" style="width: 574px;height: 384px;">
           </div>
         </div>
       </div>
@@ -712,59 +712,59 @@
     GROWTH Area
     ==============================-->
   <section class="growth-section">
-  <h2 class="mb-5 fw-bold">Our Growth (In Terms of Turnover)</h2>
-  <div class="d-flex justify-content-center align-items-end flex-wrap">
+    <h2 class="mb-5 fw-bold">Our Growth (In Terms of Turnover)</h2>
+    <div class="d-flex justify-content-center align-items-end flex-wrap">
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 20%; background: #2c7a7b;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 20%; background: #2c7a7b;"></div>
+        </div>
+        <div class="year-label">2018–19</div>
+        <div class="turnover">₹2.1 CR</div>
       </div>
-      <div class="year-label">2018–19</div>
-      <div class="turnover">₹2.1 CR</div>
-    </div>
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 45%; background: #4fd1c5;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 45%; background: #4fd1c5;"></div>
+        </div>
+        <div class="year-label">2019–20</div>
+        <div class="turnover">₹5.6 CR</div>
       </div>
-      <div class="year-label">2019–20</div>
-      <div class="turnover">₹5.6 CR</div>
-    </div>
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 80%; background: #68d391;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 80%; background: #68d391;"></div>
+        </div>
+        <div class="year-label">2020–21</div>
+        <div class="turnover">₹12.1 CR</div>
       </div>
-      <div class="year-label">2020–21</div>
-      <div class="turnover">₹12.1 CR</div>
-    </div>
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 52%; background: #f6ad55;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 52%; background: #f6ad55;"></div>
+        </div>
+        <div class="year-label">2021–22</div>
+        <div class="turnover">₹7.8 CR</div>
       </div>
-      <div class="year-label">2021–22</div>
-      <div class="turnover">₹7.8 CR</div>
-    </div>
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 84%; background: #f56565;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 84%; background: #f56565;"></div>
+        </div>
+        <div class="year-label">2022–23</div>
+        <div class="turnover">₹12.6 CR</div>
       </div>
-      <div class="year-label">2022–23</div>
-      <div class="turnover">₹12.6 CR</div>
-    </div>
 
-    <div class="text-center mx-4">
-      <div class="growth-bar">
-        <div class="bar-fill" style="height: 100%; background: #ed64a6;"></div>
+      <div class="text-center mx-4">
+        <div class="growth-bar">
+          <div class="bar-fill" style="height: 100%; background: #ed64a6;"></div>
+        </div>
+        <div class="year-label">2023–24</div>
+        <div class="turnover">₹16.8 CR</div>
       </div>
-      <div class="year-label">2023–24</div>
-      <div class="turnover">₹16.8 CR</div>
-    </div>
 
-  </div>
-</section>
+    </div>
+  </section>
 
 
   <!--==============================
@@ -772,7 +772,7 @@
     ==============================-->
   <section class="vsfaqs--layout1 space-top space-extra-bottom z-index-common">
     <div class="vsfaqs__img1">
-      <img src="assets/img/faq/faq-1-3.png" alt="">
+      <img src="assets/img/about/faq-1-3.png" alt="" style="width: 1088px;height: 726px;">
     </div>
     <div class="container">
       <div class="row gx-60">
@@ -851,10 +851,10 @@
         <div class="col-lg-6">
           <div class="vsfaqs-img">
             <div class="vsfaqs-img__img1">
-              <img src="assets/img/faq/faq-1-1.jpg" alt="faq 1">
+              <img src="assets/img/about/ab-team2.jpg" alt="faq 1" style="width: 458px;height: 552px;">
             </div>
             <div class="vsfaqs-img__img2">
-              <img src="assets/img/faq/faq-1-2.jpg" alt="faq 1">
+              <img src="assets/img/about/ab-team1.jpeg" alt="faq 1" style="width: 337px;height: 270px;">
             </div>
           </div>
         </div>
@@ -866,7 +866,7 @@
     ==============================-->
   <section class="vsteam--layout1 space-top space-extra-bottom z-index-common overflow-hidden">
     <div class="end-0 bottom-0 position-absolute z-index-n1 opacity-10">
-      <img src="assets/img/team/team-backlay-1.jpg" alt="Project">
+      <img src="assets/img/about/team-backlay.png" alt="Project" style="width: 1500px;height: 1000px;">
     </div>
     <div class="container">
       <div class="row">
@@ -885,7 +885,8 @@
           <div class="vsteam-block--style item">
             <div class="vsteam-block__media">
               <a href="index.html">
-                <img src="assets/img/team/team-member-3-1.jpg" alt="Team Member 3 1" class="team-block__member--img">
+                <img src="assets/img/about/team3.jpeg" alt="Team Member 3 1" class="team-block__member--img"
+                  style="width: 310px;height: 390px;">
               </a>
             </div>
             <div class="vsteam-block__content">
@@ -913,7 +914,8 @@
           <div class="vsteam-block--style item">
             <div class="vsteam-block__media">
               <a href="index.html">
-                <img src="assets/img/team/team-member-3-2.jpg" alt="Team Member 3 1" class="team-block__member--img">
+                <img src="assets/img/about/teamm2.jpeg" alt="Team Member 3 1" class="team-block__member--img"
+                  style="width: 310px;height: 390px;">
               </a>
             </div>
             <div class="vsteam-block__content">
@@ -941,7 +943,8 @@
           <div class="vsteam-block--style item">
             <div class="vsteam-block__media">
               <a href="index.html">
-                <img src="assets/img/team/team-member-3-3.jpg" alt="Team Member 3 1" class="team-block__member--img">
+                <img src="assets/img/about/team1.jpeg" alt="Team Member 3 1" class="team-block__member--img"
+                  style="width: 310px;height: 390px;">
               </a>
             </div>
             <div class="vsteam-block__content">
@@ -971,7 +974,7 @@
   <!--==============================
     Request Quote Form
     ==============================-->
-  <div class="quote--layout1 z-index-common overflow-hidden" data-bg-src="assets/img/bg/bg-1.jpg">
+  <div class="quote--layout1 z-index-common overflow-hidden" data-bg-src="assets/img/bg/bg.jpg">
     <div class="quote__shape position-absolute start-0 top-0 bottom-0 z-index-n1">
       <svg width="929" height="771.999" viewBox="0 0 929 771.999">
         <path id="Rectangle_523_copy" data-name="Rectangle 523 copy" d="M0,7286H636.73L929,8058,0,8056Z"
@@ -979,7 +982,7 @@
       </svg>
     </div>
     <div class="quote__img position-absolute bottom-0">
-      <img src="assets/img/quote/quote-img-1.png" alt="quote-img-1">
+      <img src="assets/img/about/quote-img-1.jpg" alt="quote-img-1" style="width: 1922px;height: 727px;">
     </div>
     <div class="container">
       <div class="row">
@@ -1069,7 +1072,7 @@
             </div>
             <div class="client-block__header">
               <div class="client-block__avatar">
-                <img src="assets/img/client/client-1-2.png" alt="client">
+                <img src="assets/img/client/client (1).png" alt="client" style="height: 70px;">
               </div>
               <div class="client-block__info">
                 <h3 class="client-block__name">Client Name</h3>
@@ -1110,7 +1113,7 @@
             </div>
             <div class="client-block__header">
               <div class="client-block__avatar">
-                <img src="assets/img/client/client-1-1.png" alt="client">
+                <img src="assets/img/client/client (2).png" alt="client" style="height: 70px;">
               </div>
               <div class="client-block__info">
                 <h3 class="client-block__name">Client Name</h3>
@@ -1151,7 +1154,7 @@
             </div>
             <div class="client-block__header">
               <div class="client-block__avatar">
-                <img src="assets/img/client/client-1-1.png" alt="client">
+                <img src="assets/img/client/client (3).png" alt="client" style="height: 70px;">
               </div>
               <div class="client-block__info">
                 <h3 class="client-block__name">Client Name</h3>
@@ -1318,7 +1321,8 @@
   </div> <!--==============================
 			Footer Area
 	==============================-->
-  <footer class="footer-wrapper footer-layout3" data-bg-src="assets/img/footer/footer-bg.jpg">
+  <footer class="footer-wrapper footer-layout3">
+    <div class="footer-bg-blur"></div>
     <div class="footer-layout3__overlay"></div>
     <div class="widget-area">
       <div class="container">
