--- a/product-details3.html
+++ b/product-details3.html
@@ -320,7 +320,7 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <div class="breadcumb-wrapper" data-bg-src="assets/img/breadcumb/breadcumb-bg.jpg">
+    <div class="breadcumb-wrapper" style="background-image: url('assets/img/breadcumb/breadcrumb.png');">
         <div class="container z-index-common">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">PRODUCT DETAILS</h1>
@@ -683,7 +683,8 @@
     </div> <!--==============================
 			Footer Area
 	==============================-->
-    <footer class="footer-wrapper footer-layout3" data-bg-src="assets/img/footer/footer-bg.jpg">
+    <footer class="footer-wrapper footer-layout3" >
+        <div class="footer-bg-blur"></div>
         <div class="footer-layout3__overlay"></div>
         <div class="widget-area">
             <div class="container">
